Fixed list spacing

--- a/style.css
+++ b/style.css
@@ -9,20 +9,22 @@ header{
 
 main {
     width: 960px;
-    margin: 0px auto;
+    margin: 10px auto;
 }
 main ul li {
-    display: inline-block;
-    margin: 0px 10px 0px 5px;
-}
-main ul {
-    margin: 0px 5px;
+    list-style: none;
+    float: left;
+    margin: 10px 30px 10px 0px;
 }
 main li:last-child{
     margin-right: 0px;
 }
+main ul {
+    margin: 0px auto;
+    padding: 0px;
+}
 div {
-    margin: 5px 10px;
+    margin: 5px auto;
 }
 
 footer{
